# devils-gold

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
src/: recipe.py  sulfur.py  sulfur_enums.py  sulfur_types.py  translations.py  unpack.py  utils.py  weapons.py  wiki.py
