[project]
name = "devils-gold"
version = "0.1.0"
description = "SULFUR datamining tool"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pyi2l",
    "unitypy>=1.20.15",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]

[tool.uv.sources]
pyi2l = { git = "https://github.com/clemf/pyI2L" }
